[gd_scene load_steps=17 format=3 uid="uid://c7y04k757uufb"]

[ext_resource type="Script" path="res://app/scenes/game_card.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bvin88lmvnc0g" path="res://shared/fonts/roboto/roboto_regular.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://cn88u21i02x52" path="res://icon.png" id="3"]
[ext_resource type="FontFile" uid="uid://mxmtthgx84lh" path="res://shared/fonts/roboto/roboto_black.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://bb2t8dnwjfpxa" path="res://app/images/cross_40.png" id="5"]
[ext_resource type="Shader" path="res://app/shader/blur.gdshader" id="6"]
[ext_resource type="Theme" uid="uid://bunk0mj5uo6u0" path="res://app/style/theme_game_card.tres" id="7"]
[ext_resource type="Theme" uid="uid://cgjtrd7nb22qt" path="res://app/style/round_icon_button_theme.tres" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="9"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="20"]
shader = ExtResource("6")
shader_parameter/amount = 4.5

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="23"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="16"]
border_width_left = 1
border_color = Color(0.266667, 0.266667, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="21"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="GameCard" type="PanelContainer"]
custom_minimum_size = Vector2(320, 187)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -704.0
offset_bottom = -413.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("7")
script = ExtResource("1")

[node name="Card" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(296, 0)
layout_mode = 2
theme_override_constants/separation = 11

[node name="TitleSection" type="HBoxContainer" parent="Card"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="icon" type="TextureRect" parent="Card/TitleSection"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1

[node name="VC" type="VBoxContainer" parent="Card/TitleSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 1

[node name="LabelTitle" type="Label" parent="Card/TitleSection/VC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("1")
text = "<game title>"

[node name="HC" type="HBoxContainer" parent="Card/TitleSection/VC"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="Card/TitleSection/VC/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("9")
text = "T_PLAYTIME"

[node name="LabelPlaytimeNumber" type="Label" parent="Card/TitleSection/VC/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("9")
text = "<x>"

[node name="LabelPlaytimeUnit" type="Label" parent="Card/TitleSection/VC/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("9")
text = "<time unit>"

[node name="SC" type="ScrollContainer" parent="Card"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MC" type="MarginContainer" parent="Card/SC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="Description" type="Label" parent="Card/SC/MC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap_mode = 3

[node name="ButtonSection" type="HBoxContainer" parent="Card"]
layout_mode = 2
alignment = 2

[node name="ButtonInfo" type="Button" parent="Card/ButtonSection"]
layout_mode = 2
text = "T_INFO"

[node name="ButtonPlay" type="Button" parent="Card/ButtonSection"]
layout_mode = 2
text = "T_PLAY"

[node name="PopupDialogInfo" type="Popup" parent="."]
size = Vector2i(650, 400)

[node name="VC" type="VBoxContainer" parent="PopupDialogInfo"]
custom_minimum_size = Vector2(650, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="TitleSection" type="PanelContainer" parent="PopupDialogInfo/VC"]
material = SubResource("20")
layout_mode = 2

[node name="HC" type="HBoxContainer" parent="PopupDialogInfo/VC/TitleSection"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="TextureRectIcon" type="TextureRect" parent="PopupDialogInfo/VC/TitleSection/HC"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1

[node name="Title" type="VBoxContainer" parent="PopupDialogInfo/VC/TitleSection/HC"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LabelTitle" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("10")
text = "<game title>"

[node name="HC" type="HBoxContainer" parent="PopupDialogInfo/VC/TitleSection/HC/Title"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "T_PLAYTIME"

[node name="LabelPlaytimeNumber" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "<x>"

[node name="LabelPlaytimeUnit" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title/HC"]
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "<time unit>"

[node name="LabelPlaytimeNumber2" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title/HC"]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "<x>"

[node name="PlaytimeUnit2" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/Title/HC"]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "<time unit>"

[node name="HighScore" type="VBoxContainer" parent="PopupDialogInfo/VC/TitleSection/HC"]
layout_mode = 2
size_flags_horizontal = 11
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="Label" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/HighScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("11")
text = "T_HIGHSCORE"

[node name="LabelHighscore" type="Label" parent="PopupDialogInfo/VC/TitleSection/HC/HighScore"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("11")
text = "<highscore>"

[node name="ButtonClosePopup" type="Button" parent="PopupDialogInfo/VC/TitleSection/HC"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("8")
icon = ExtResource("5")

[node name="InfoSection" type="PanelContainer" parent="PopupDialogInfo/VC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("23")

[node name="HC" type="HBoxContainer" parent="PopupDialogInfo/VC/InfoSection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Description" type="Label" parent="PopupDialogInfo/VC/InfoSection/HC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0

[node name="VSeparator" type="VSeparator" parent="PopupDialogInfo/VC/InfoSection/HC"]
layout_mode = 2
theme_override_styles/separator = SubResource("16")

[node name="VC" type="VBoxContainer" parent="PopupDialogInfo/VC/InfoSection/HC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PopupDialogInfo/VC/InfoSection/HC/VC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("11")
text = "T_AUTHOR"

[node name="LabelAuthor" type="Label" parent="PopupDialogInfo/VC/InfoSection/HC/VC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("11")
text = "<author>"

[node name="Control" type="Control" parent="PopupDialogInfo/VC/InfoSection/HC/VC"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Label2" type="Label" parent="PopupDialogInfo/VC/InfoSection/HC/VC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("11")
text = "T_VERSION"

[node name="LabelVersion" type="Label" parent="PopupDialogInfo/VC/InfoSection/HC/VC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("11")
text = "<version>"

[node name="PC3" type="PanelContainer" parent="PopupDialogInfo/VC"]
layout_mode = 2
theme_override_styles/panel = SubResource("21")

[node name="ButtonPlay" type="Button" parent="PopupDialogInfo/VC/PC3"]
layout_mode = 2
size_flags_horizontal = 8
text = "T_PLAY"

[connection signal="pressed" from="Card/ButtonSection/ButtonInfo" to="." method="_on_ButtonInfo_pressed"]
[connection signal="pressed" from="Card/ButtonSection/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="PopupDialogInfo/VC/TitleSection/HC/ButtonClosePopup" to="." method="_on_ButtonClosePopup_pressed"]
[connection signal="pressed" from="PopupDialogInfo/VC/PC3/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
